--- a/index.html
+++ b/index.html
@@ -410,6 +410,30 @@
                     return result;
                 }
 
+                function checkSTIS() {
+                    let result = true;
+                    const schools = [
+                        "SMA IPA",
+                        "SMA IPS",
+                        "MA IPA",
+                        "MA IPS",
+                        "MA ILMU KEAGAMAAN",
+                        "SMK TEKNIK INFORMATIKA/KOMPUTER"
+                    ];
+                    const blindEye = [
+                        "Tidak Minus",
+                        "Minus < 1",
+                        "Minus 1 - 4",
+                        "Minus 4 - 6"
+                    ];
+
+                    result &= schools.includes(sekolah) ? true : false;
+                    result &= "Tidak Buta Warna" === butaWarna ? true : false;
+                    result &= blindEye.includes(minus) ? true : false;
+
+                    return result;
+                }
+
                 return (
                     <React.Fragment>
                         {checkIPDN() ? <ListItem title="IPDN" page="cek-ipdn" /> : ""}
@@ -417,7 +441,7 @@
                         {checkPoltekipPoltekim() ? <ListItem title="POLTEKIP/POLTEKIM" page="cek-poltekip-poltekim" /> : ""}
                         {checkSSN() ? <ListItem title="POLTEK SSN" page="cek-ssn" /> : ""}
                         {checkKemenhub() ? <ListItem title="SEKDIN KEMENHUB" page="cek-kemenhub" /> : ""}
-                        <ListItem title="POLSTAT STIS" page="cek-polstat-stis" />
+                        {checkSTIS() ? <ListItem title="POLSTAT STIS" page="cek-polstat-stis" /> : ""}
                         <ListItem title="STMKG" page="cek-stmkg" />
                         <ListItem title="STIN" page="cek-stin" />
                     </React.Fragment>
